--- a/client/package.json
+++ b/client/package.json
@@ -3,14 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^5.1.1",
     "concurrently": "^8.2.2",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
+    "emoji-picker-react": "^4.12.0",
+    "jodit-react": "^4.1.2",
+    "jwt-decode": "^4.0.0",
+    "primereact": "^10.8.3",
+    "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
+    "react-quill": "^2.0.0",
     "react-scripts": "5.0.1",
     "source-map-loader": "^5.0.0",
     "vercel": "^34.3.1",
@@ -42,6 +52,7 @@
   },
   "devDependencies": {
     "react-router-dom": "^6.24.1",
+    "tailwindcss": "^3.4.13",
     "terser-brunch": "^4.1.0"
   }
 }
